--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -14,6 +14,11 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
+      - name: Corepack
+        run: |
+          npm install -g corepack@latest
+          corepack install
+
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
